--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ jupyterlite-xeus-lua==0.3.1
 jupyterlite-xeus-wren==0.2.1
 jupyterlite-xeus-sqlite==0.2.1
 plotly>=5,<6
+matplotlib==3.5.3
 theme-darcula
