--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,7 @@ jupyterlite-xeus-wren==0.2.1
 jupyterlite-xeus-sqlite==0.2.1
 plotly>=5,<6
 matplotlib==3.5.3
+numpy==1.23.2
+netCDF4==1.6.0
+cartopy==0.20.3
 theme-darcula
