--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.9
       - name: Install the dependencies
         run: |
-          python pip install -r requirements.txt
+          python -m pip install -r requirements.txt --no-warn-conflicts
       - name: Build the JupyterLite site
         run: |
           cp README.md content
