--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Install the dependencies
         run: |
           python -m pip install -r requirements.txt
+          conda install -c conda-forge netCDF4
           conda install -c conda-forge cartopy
       - name: Build the JupyterLite site
         run: |
