--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,13 @@ jobs:
           python-version: 3.9
       - name: Install the dependencies
         run: |
+          sudo add-apt-repository ppa:ubuntugis/ppa
+          sudo apt-get update
+          sudo apt-get install gdal-bin
+          sudo apt-get install libgdal-dev
+          export CPLUS_INCLUDE_PATH=/usr/include/gdal
+          export C_INCLUDE_PATH=/usr/include/gdal
           python -m pip install -r requirements.txt
-          conda install -c conda-forge/label/gcc7 netcdf4
-          conda install -c conda-forge cartopy
       - name: Build the JupyterLite site
         run: |
           cp README.md content
