--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           export C_INCLUDE_PATH=/usr/include/gdal
           python -m pip install -r requirements.txt
           conda install -c conda-forge gdal
+          conda install -c conda-forge h5py
       - name: Build the JupyterLite site
         run: |
           cp README.md content
