--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           export CPLUS_INCLUDE_PATH=/usr/include/gdal
           export C_INCLUDE_PATH=/usr/include/gdal
           python -m pip install -r requirements.txt
+          conda update -n base -c defaults conda
           conda install -c conda-forge gdal
           conda install -c conda-forge h5py
       - name: Build the JupyterLite site
